--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>myParser</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>myParser</name>
+  <name>correction-parser</name>
   <url>http://maven.apache.org</url>
   <distributionManagement>
     <snapshotRepository>
