--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
 	<dependency>
       <groupId>com.emotibot</groupId>
       <artifactId>correction</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>0.1.0--SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>log4j</groupId>
